--- a/Complement_probabilites_statistique/variables-aléatoires-discrètes.html
+++ b/Complement_probabilites_statistique/variables-aléatoires-discrètes.html
@@ -381,6 +381,11 @@ la probabilité d’avoir exactement une pile.
      1 &amp; \quad \text{si $x \geq 3$}\\
 \end{array} \right.\]</span></p>
 <p>Le graphe de cette dernière est représentée dans la figure suivante:</p>
+<pre><code>## 
+## Attaching package: &#39;latex2exp&#39;
+## The following object is masked from &#39;package:plotly&#39;:
+## 
+##     TeX</code></pre>
 <p><img src="Complement_probabilites_statistique_files/figure-html/unnamed-chunk-6-1.png" width="70%" style="display: block; margin: auto;" /></p>
 <p><strong>Exemple:</strong> Soit <span class="math inline">\(A\)</span> un événement quelconque. On appelle variable aléatoire <em>indicatrice</em> de cet événement <span class="math inline">\(A\)</span>, la variable aléatoire définie par: <span class="math display">\[X(\omega) = \left\{ 
 \begin{array}{l l}
