--- a/MLcourse/pw-2.html
+++ b/MLcourse/pw-2.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-09-11" />
+<meta name="date" content="2020-09-15" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -403,10 +403,7 @@ code span.wa { color: #bf0303; } /* Warning */
 <p><strong>14</strong>. What is the correlation between <code>tax</code> and <code>rad</code>?</p>
 <p><strong>15</strong>. Run the model again without <code>tax</code>. What happens to the <span class="math inline">\(R^2\)</span> ? and for the F-statistic?</p>
 <div class="rmdinsight">
-<p>
-Of course <span class="math inline"><span class="math inline">\(R^2\)</span></span> should go a little lower because we deleted one of the variables. But check for the model significance (F-statistic) gets higher, which means the p-values gets lower and thus the model is more significant without <code>rad</code>.
-</p>
-<!-- **Extra**: Re run the model but delete `tax` instead of `rad`. -->
+<p>Of course <span class="math inline">\(R^2\)</span> should go a little lower because we deleted one of the variables. But check for the model significance (F-statistic) gets higher, which means the p-values gets lower and thus the model is more significant without <code>rad</code>.</p>
 </div>
 <p><strong>16</strong>. Calculate the mean squared error (MSE) for the last model.</p>
 <p><strong>Anova</strong></p>
@@ -421,9 +418,7 @@ Of course <span class="math inline"><span class="math inline">\(R^2\)</span></sp
 <p><strong>Qualitative predictors</strong></p>
 <p> <i class="fa fa-exclamation-triangle " aria-hidden="true"></i> <strong>Before starting the next question, please read section <a href="multiple-linear-regression.html#other-consid">2.3.1</a> and Appendix <a href="use-qual.html#use-qual">C</a> about using qualitative predictors in regression</strong>.</p>
 <div class="rmdinsight">
-<p>
-We are going to use the categorical variable <code>chas</code> which corresponds to Charles River (= 1 if a suburb bounds the river; 0 otherwise). Using the <code>str()</code> command you can notice that this variable is not codified as a factor, but it has values 0 or 1, so it is already dummyfied.
-</p>
+<p>We are going to use the categorical variable <code>chas</code> which corresponds to Charles River (= 1 if a suburb bounds the river; 0 otherwise). Using the <code>str()</code> command you can notice that this variable is not codified as a factor, but it has values 0 or 1, so it is already dummyfied.</p>
 </div>
 <p><strong>21</strong>. Fit a new model where the predictors are the Charles River and the Crime Rate. Interpret the coefficients of this model and conclude if the presence of the river adds a valuable information for explaining the house price.</p>
 <p><strong>22</strong>. Is <code>chas</code> is significant as well in the presence of more predictors?</p>
@@ -439,18 +434,10 @@ If your file is named <code>report.R</code>, your report is named <code>report.h
 <p><strong>25</strong>. Compile a report based on your script.</p>
 <div class="rmdcaution">
 <ul>
-<li>
-Make sure to have the latest version of <code>Rstudio</code>.
-</li>
-<li>
-If you have problems with compiling (problem in installing packages, etc..) close your <code>Rstudio</code> and reopen it with administrative tools and retry.
-</li>
-<li>
-Be ready to submit your report (your <code>.html</code> file) at the end of each class.
-</li>
-<li>
-You report must be named: <code>YouLastName_YourFirstName_WeekNumber.html</code>
-</li>
+<li>Make sure to have the latest version of <code>Rstudio</code>.</li>
+<li>If you have problems with compiling (problem in installing packages, etc..) close your <code>Rstudio</code> and reopen it with administrative tools and retry.</li>
+<li>Be ready to submit your report (your <code>.html</code> file) at the end of each class.</li>
+<li>You report must be named: <code>YouLastName_YourFirstName_WeekNumber.html</code></li>
 </ul>
 </div>
 <p class="text-right">
