--- a/MLcourse/pw-2.html
+++ b/MLcourse/pw-2.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-09-15" />
+<meta name="date" content="2020-09-18" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -203,7 +203,7 @@ code span.wa { color: #bf0303; } /* Warning */
 <li class="chapter" data-level="2.3.1" data-path="multiple-linear-regression.html"><a href="multiple-linear-regression.html#other-consid"><i class="fa fa-check"></i><b>2.3.1</b> Other Considerations in Regression Model</a></li>
 </ul></li>
 <li class="chapter" data-level="2.4" data-path="multiple-linear-regression.html"><a href="multiple-linear-regression.html#how-to-select-the-best-performing-model"><i class="fa fa-check"></i><b>2.4</b> How to select the best performing model</a><ul>
-<li><a href="multiple-linear-regression.html#use-the-adjusted-r_adj2-for-univariate-models">Use the Adjusted <span class="math inline">\(R_{adj}^2\)</span> for univariate models</a></li>
+<li><a href="multiple-linear-regression.html#use-the-adjusted-r_adj2-for-multivariate-models">Use the Adjusted <span class="math inline">\(R_{adj}^2\)</span> for multivariate models</a></li>
 <li class="chapter" data-level="" data-path="multiple-linear-regression.html"><a href="multiple-linear-regression.html#have-a-look-at-the-residuals-or-error-terms"><i class="fa fa-check"></i>Have a look at the residuals or error terms</a></li>
 <li class="chapter" data-level="" data-path="multiple-linear-regression.html"><a href="multiple-linear-regression.html#histogram-of-residuals"><i class="fa fa-check"></i>Histogram of residuals</a></li>
 </ul></li>
@@ -393,8 +393,8 @@ code span.wa { color: #bf0303; } /* Warning */
 <p><strong>4</strong>. Fit a model of housing prices in function of age and plot the observations and the regression line.</p>
 <p><strong>5</strong>. Train a regression model using both <code>lstat</code> and <code>age</code> as predictors of median house value. (Remember that we transformed <code>lstat</code>, use the same transformation here). What is the obtained model?</p>
 <p><strong>6</strong>. Print the summary of the obtained regression model.</p>
-<p><strong>7</strong>. Are the predictors significant ?</p>
-<p><strong>8</strong>. Is the model as a whole significant? Answer on this question must be detailed.</p>
+<p><strong>7</strong>. Is the model as a whole significant? Answer on this question must be detailed.</p>
+<p><strong>8</strong>. Are the predictors significant ?</p>
 <p><strong>9</strong>. Train a new model using all the variables of the dataset. (We can use <code>.</code> as a short cut instead of writing down all the variables names)</p>
 <p><strong>10</strong>. When using all the variables as predictors, we didn’t transform <code>lstat</code>. Re train the model using <code>log(lstat)</code> instead of <code>lstat</code>.</p>
 <p><strong>11</strong>. Did <span class="math inline">\(R^2\)</span> improve ?</p>
@@ -403,7 +403,7 @@ code span.wa { color: #bf0303; } /* Warning */
 <p><strong>14</strong>. What is the correlation between <code>tax</code> and <code>rad</code>?</p>
 <p><strong>15</strong>. Run the model again without <code>tax</code>. What happens to the <span class="math inline">\(R^2\)</span> ? and for the F-statistic?</p>
 <div class="rmdinsight">
-<p>Of course <span class="math inline">\(R^2\)</span> should go a little lower because we deleted one of the variables. But check for the model significance (F-statistic) gets higher, which means the p-values gets lower and thus the model is more significant without <code>rad</code>.</p>
+<p>Of course <span class="math inline">\(R^2\)</span> should go a little lower because we deleted one of the variables. But check for the model significance (F-statistic) gets higher, which means the p-values gets lower and thus the model is more significant without <code>tax</code>.</p>
 </div>
 <p><strong>16</strong>. Calculate the mean squared error (MSE) for the last model.</p>
 <p><strong>Anova</strong></p>
